<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+settings/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lock_background" >
    <RelativeLayout
        android:id="@+settings/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/lock_settings_upper_bar"
            android:scaleType="fitXY" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/lock_settings_title" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+settings/RelativeLayout2"
        android:orientation="vertical"
        android:padding="10dp" >
        <TextView
            android:id="@+settings/tvPasswordGenerator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lblSettingsPasswordGenerator"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <TextView
            android:id="@+settings/tvDeleteDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lblSettingsDeleteDatabase"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <TextView
            android:id="@+settings/tvResetCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lblSettingsResetCredentials"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp" >
            <TextView
                android:id="@+settings/tvSelfDestruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/lblSettingsSelfDestruct"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            <ToggleButton
                android:id="@+settings/tbSelfDestruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+settings/tvSelfDestruct"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="22dp"
                android:text="With this option enabled"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
        <TextView
            android:id="@+settings/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lblSettingsLogout"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/lock_categories_lowerbar"
        android:scaleType="fitXY" />
</RelativeLayout>